--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.510.0",
     "moment": "^2.30.1",
     "next-themes": "^0.4.6",
